--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Documentación del Proyecto
-
+site_url: "https://alevillacresss.github.io/ACT-JR/"
 docs_dir: docs_src
 
 nav:
@@ -7,4 +7,4 @@ nav:
   - Manual de Usuario: Manual_de_Usuario.md
   - Guía de Referencia: Guia_de_Referencia.md
   - Guía de Instalación: Guia_de_Instalacion.md
-  
+
